# esg_ontology

./: .gitignore  README.md  pyproject.toml
scripts/: 01_text_processing.py  02_neo4j_integration.py  03_knowledge_completion.py  04_graph_rag.py  05_evaluation.py  05_text_extraction.py  06_ontology_construction.py
src/esg_ontology/: __init__.py
src/evaluation/: metrics.py
src/knowledge_graph/: neo4j_manager.py  ontology.py
src/rag/: graph_rag.py
src/utils/: device.py
tests/: test_knowledge_completion.py
