[project]
name = "esg_ontology"
version = "0.1.0"
description = "ESGドメインの知識グラフを自動構築するためのプロジェクト"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "spacy==3.7.2",
    "transformers==4.36.0",
    "torch==2.1.0",
    "neo4j==5.14.0",
    "pandas==2.1.0",
    "numpy==1.24.0",
    "scikit-learn==1.3.0",
    "networkx==3.2.0",
    "sentence-transformers==2.3.1",
    "huggingface-hub==0.20.3",
    "tqdm==4.66.0",
    "python-dotenv==1.0.0",
    "matplotlib==3.8.0",
]
requires-python = ">=3.9,<3.13"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.rye]
managed = true
dev-dependencies = [
    "black>=23.12.1",
    "isort>=5.13.2",
    "mypy>=1.8.0",
    "pytest>=7.4.4",
]

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true 